--- a/slide4.html
+++ b/slide4.html
@@ -167,9 +167,9 @@
                 .attr("y1", yScale(2.1))
                 .attr("x2", width)
                 .attr("y2", yScale(2.1))
-                .attr("stroke", "red")
+                .attr("stroke", "black")
                 .attr("stroke-width", 2)
-                .attr("stroke-dasharray", "5,5");
+                .attr("stroke-dasharray", "3,3");
             svg.append("text")
                 .attr("x", width - 100)
                 .attr("y", yScale(2.1) - 10)
