Minor design tweak

--- a/slide4.html
+++ b/slide4.html
@@ -173,7 +173,7 @@
             svg.append("text")
                 .attr("x", width - 100)
                 .attr("y", yScale(2.1) - 10)
-                .attr("fill", "red")
+                .attr("fill", "black")
                 .style("font-size", "12px")
                 .text("Replacement Level (2.1)");
             const line = d3.line()
